--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>fairy-tale-wedding-vows</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <title>Alan Biju & Agnes George</title>
+    <meta name="description" content="Alan Biju & Agnes George" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="fairy-tale-wedding-vows" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Alan Biju & Agnes George" />
+    <meta property="og:description" content="Alan Biju & Agnes George" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/703/703213.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <meta name="twitter:image" content="https://cdn-icons-png.flaticon.com/512/703/703213.png" />
   </head>
 
   <body>
