new added daril ans sneha

--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alan Biju & Agnes George</title>
-    <meta name="description" content="Alan Biju & Agnes George" />
+    <title>Daril & Sneha</title>
+    <meta name="description" content="Daril & Sneha" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="Alan Biju & Agnes George" />
-    <meta property="og:description" content="Alan Biju & Agnes George" />
+    <meta property="og:title" content="Daril & Sneha" />
+    <meta property="og:description" content="Daril & Sneha" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/703/703213.png" />
+    <meta
+      property="og:image"
+      content="https://cdn-icons-png.flaticon.com/512/703/703213.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
 
-    <meta name="twitter:image" content="https://cdn-icons-png.flaticon.com/512/703/703213.png" />
+    <meta
+      name="twitter:image"
+      content="https://cdn-icons-png.flaticon.com/512/703/703213.png"
+    />
   </head>
 
   <body>
